syntax = "proto3";

option java_package = "org.dbsyncer.parser.proto";
option java_outer_classname = "WriterRequestMessage";
option optimize_for = SPEED;

message WriterRequestMessage {
    string meta_id = 1;
    string target_connector_id = 2;
    string source_table_name = 3;
    string target_table_name = 4;
    repeated string event = 5;
    repeated Field fields = 6;
    repeated Command command = 7;
}

message Field {
    string name = 1;
    string type_name = 2;
    int32 type = 3;
    bool pk = 4;
}

message Command {
    map<string, string> a = 1;
}